Rename content to source in module payload
